@@ -1,0 +1,17 @@
+global-include debian* README
+global-exclude *patch* *diff* .svn
+
+include NEWS README
+include rpy/rinterface/rinterface.h
+include rpy/rinterface/rinterface.c
+include rpy/rinterface/array.c
+include rpy/rinterface/array.h
+include rpy/rinterface/r_utils.c
+include rpy/rinterface/r_utils.h
+
+include debian/*
+
+prune debian/.svn
+prune CVS
+prune dist
+prune doc
